# rust-react

./: docker-compose-dev.yml  readme.md
.github/workflows/: ci.yml
client/: package.json
client/src/: App.tsx
server/: .gitignore  Cargo.toml
server/client/src/: App.tsx  types.d.ts
server/src/: main.rs  types.rs
